# gipeda

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  gipeda.cabal  index.html  install-jslibs.sh  stack-lts-2.22.yaml  stack-lts-5.yaml  stack-lts-6.yaml  stack.yaml  update.sh  upload.sh
binary/: log2csv  settings.yaml
example/: genexample.sh  genlogs.sh  gipeda.yaml  log2csv  settings.yaml
ghc/: gipeda.yaml  log2csv  run-speed.sh  settings.yaml  update.sh  watch.sh
js/: gipeda.js
site/: index.html
site/js/: gipeda.js
src/: BenchNames.hs  BenchmarkSettings.hs  BenchmarksInCSV.hs  EmbeddedFiles.hs  GraphReport.hs  GraphSummaries.hs  IndexReport.hs  JsonSettings.hs  JsonUtils.hs  ParentMap.hs  Paths.hs  ReadResult.hs  ReportTypes.hs  RevReport.hs  Shake.hs  Summary.hs  WithLatestLogs.hs  gipeda.hs
src/Data/Text/: Binary.hs
src/Development/Shake/: Fancy.hs  Gitlib.hs
