name:                gipeda
version:             0.1.0.0
synopsis:            Git Performance Dashboard
homepage:            https://github.com/nomeata/gipeda
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable gipeda
  main-is:
      gipeda.hs

  other-extensions:
      DeriveGeneric,
      OverloadedStrings,
      RecordWildCards,
      ViewPatterns,
      DeriveDataTypeable,
      GeneralizedNewtypeDeriving

  build-depends:
      base >=4.6 && <4.8,
      bytestring >=0.10 && <0.11,
      containers >=0.5 && <0.6,
      directory >=1.2 && <1.3,
      filepath >=1.3 && <1.4,
      shake >=0.13 && <0.15,
      text >=0.11 && <1.3,
      unordered-containers >=0.2 && <0.3,
      split >=0.2 && <0.3,
      vector >=0.10 && <0.11,
      cassava >=0.4 && <0.5,
      yaml >=0.8 && <0.9,
      aeson >=0.7 && <0.9

  hs-source-dirs: src

  default-language: Haskell2010
