name:                gipeda
version:             0.3.2.2
category:            Development
synopsis:            Git Performance Dashboard
description:
 Gipeda is a a tool that presents data from your program’s benchmark suite
 (or any other source), with nice tables and shiny graphs.
 .
 So it is up to you whether you have a polling shell script loop, a post-commit
 hook or an elaborate jenkins setup. As long as the performance data ends up in
 the `logs/` directory, gipeda is happy.
 .
 Gipeda produces static pages. In fact, the (single) html file and the
 accompanying JavaScript code is completely static. Giepda just generates a
 large number of json files. This has the advantage of easy deployment: Just put
 gipeda in your webspace or copy the files to some static web hosting and you
 are done. This puts very little load on your server, is cache-friendly and has
 no security problems.
 .
 Do you want to see it live? Check out these:
 .
   * Demo page, visualizing fairly boring stuff about gipedia itself:
     <http://nomeata.github.io/gipeda/>
 .
   * GHC’s gipeda installation:
     <https://perf.haskell.org/>
homepage:            https://github.com/nomeata/gipeda
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
build-type:          Simple
extra-source-files:
  README.md,
  site/index.html,
  site/js/gipeda.js,
  install-jslibs.sh
cabal-version:       >=1.10

executable gipeda
  main-is:
      gipeda.hs

  other-modules:
    BenchmarkSettings,
    BenchmarksInCSV,
    BenchNames,
    GraphReport,
    JsonSettings,
    JsonUtils,
    ParentMap,
    Paths,
    ReadResult,
    ReportTypes,
    RevReport,
    Shake,
    Summary,
    GraphSummaries,
    WithLatestLogs,
    EmbeddedFiles,
    Development.Shake.Gitlib,
    Development.Shake.Fancy,
    Data.Text.Binary


  build-depends:
      base                 >= 4.6   && <4.10,
      bytestring           >= 0.10  && <0.11,
      containers           >= 0.4   && <0.6,
      directory            >= 1.2   && <1.3,
      filepath             >= 1.3   && <1.5,
      shake                >= 0.13  && <0.16,
      text                 >= 0.11  && <1.3,
      unordered-containers >= 0.2   && <0.3,
      split                >= 0.2   && <0.3,
      vector               >= 0.10  && <0.12,
      cassava              >= 0.4   && <0.5,
      yaml                 >= 0.8   && <0.9,
      aeson                >= 0.7   && <1.1,
      scientific           >= 0.3   && <0.4,
      gitlib               >= 3.1.0.2 && <3.2,
      gitlib-libgit2,
      tagged               >= 0.7   && <0.9,
      extra                >= 1     && <1.6,
      file-embed           >= 0.0.9 && < 0.0.11,
      concurrent-output    >= 1.7   && < 1.8,
      transformers         >= 0.4   && < 0.6

  hs-source-dirs: src

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/nomeata/gipeda
